# IE-0417

./: .gitignore
laboratorio-concurrencia/: README.md
laboratorio-concurrencia/resultados/: analisis.md
laboratorio-concurrencia/src/: parte1_threads.cpp  parte2_race_condition.cpp  parte3_mutex.cpp  parte4_benchmark.cpp  parte5_hilos_vs_rendimiento.cpp  parte6_deadlock.cpp  parte6_deadlock_corregido.cpp
laboratorio-contenedores/: README.md  parte1-verificacion.md  parte2-comandos-basicos.md  parte3-imagenes-y-contenedores.md  parte4-dockerfile.md  parte5-puertos.md  parte6-volumenes.md  parte7-redes.md  parte8-limpieza.md
laboratorio-contenedores/app/: app.py
laboratorio-depuracion/: README.md  indicaciones_lab.md  parte1-instalacion.md  parte2-tipos-errores.md  parte3-gdb-basico.md  parte4-gdb-funciones.md  parte5-valgrind.md  parte6-asan.md  parte7-hilos.md  parte8-reto-y-reflexion.md
laboratorio-depuracion/codigo/: 01_error_sintaxis.cpp  10_reto.cpp  (+9 more)
laboratorio-testing/: CMakeLists.txt
laboratorio-testing/.github/workflows/: testing.yml
laboratorio-testing/docs/: parte1-plan-pruebas.md  parte2-pruebas-unitarias.md  parte3-pruebas-fallidas.md  parte4-casos-borde.md  parte5-cobertura.md  parte6-github-actions.md  reflexion-final.md
laboratorio-testing/include/: calculator.h  grade_utils.h  string_utils.h
laboratorio-testing/src/: calculator.cpp  grade_utils.cpp  string_utils.cpp
laboratorio-testing/tests/: test_calculator.cpp  test_grade_utils.cpp  test_string_utils.cpp
laboratorio1/: parte1_git.md  parte2_documentacion.md
tarea2/: tarea2.md
